
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int Accesses; } ;
typedef TYPE_1__ RPC_ENUM_ACCESS_LIST ;


 int Free (int ) ;

void FreeRpcEnumAccessList(RPC_ENUM_ACCESS_LIST *a)
{

 if (a == ((void*)0))
 {
  return;
 }

 Free(a->Accesses);
}
